<resources>
    <string name="app_name">SUC</string>
    <string name="title_activity_user">Usuarios</string>
    <string name="title_activity_authentication">Bienvenido</string>
    <string name="title_activity_sign_up">Registrarse</string>
    <string name="title_activity_forgot_password">Olvidé mi contraseña</string>
    <string name="title_activity_start">Principal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Ingrese su mail</string>
    <string name="prompt_password">Ingrese contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_up">Soy nuevo</string>
    <string name="action_sign_up_user">Registrarme</string>
    <string name="action_forgot_password_user">Enviarme una nueva contraseña</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El nombre de usuario es inválido</string>
    <string name="error_invalid_user_name">El nombre de usuario es invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Para permitir autocompletar este campo debe darnos permisos para leer sus contactos"
    </string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="closing_session">Cerrando…</string>
    <string name="login_forgot_password">No se mi clave</string>
    <string name="login_is_new">¿Eres nuevo?</string>


    <string name="prompt_alias">Ingrese un alias</string>
    <string name="prompt_surname">Ingrese su apellido</string>
    <string name="prompt_name">Ingrese su nombre</string>
    <string name="prompt_phone_optional">Ingrese su teléfono (Opcional)</string>
    <string name="prompt_document_optional">Ingrese su número de documento (Opcional)</string>
    <string name="prompt_born_date_optional">Ingrese su fecha de nacimiento (Opcional)</string>
    <string name="prompt_door_optional">Puerta (Opcional)</string>
    <string name="prompt_floor_optional">Piso (Opcional)</string>
    <string name="prompt_street_number_optional">Ingrese número de calle (Opcional)</string>
    <string name="prompt_street_optional">Ingrese su calle (Opcional)</string>

    <string name="alias">Alias</string>
    <string name="surname">Apellido</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="document">Número de documento</string>
    <string name="born_date">Fecha de nacimiento</string>
    <string name="door">Puerta</string>
    <string name="floor">Piso</string>
    <string name="street_number">Número de calle</string>
    <string name="street">Calle</string>

    <string name="forgot_password_mail_notification">Se ha enviado a su correo con su nueva contraseña</string>
    <string name="forgot_password_notification_title">SUC - Admin</string>
    <string name="prompt_user_or_email">Ingresé su usuario ó mail</string>
    <string name="error_invalid_login_fields">Los datos ingresados no son correctos. Revíselos y vuelva a intentar</string>
    <string name="error_api_communication">Estamos temporalmente con problemas en el servicio. Intente en unos minutos!</string>
    <string name="action_my_account">Mi cuenta</string>

    <string name="title_my_account">Mi cuenta</string>
    <string name="mail">Mail</string>
    <string name="action_update_user">Actualizar datos</string>
    <string name="update_successful">Tus datos han sido actualizados correctamente</string>
    <string name="update_error">Ocurrió un error actualizando tus datos</string>
    <string name="action_change_password">Cambiar contraseña</string>
    <string name="title_change_password">Cambiar contraseña</string>
    <string name="prompt_old_password">Contraseña actual</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_new_password_validate">Repita su nueva contraseña</string>
    <string name="password_missmatch">Revise la nueva contraseña</string>
    <string name="action_main">Principal</string>
    <string name="home_see_all">Ver todos</string>
    <string name="home_near_me">Cerca de mí</string>
    <string name="home_more_nedeed">Más necesitados</string>
    <string name="home_button_donate">Quiero donar</string>
    <string name="action_nearest_diners">Comedores cercanos</string>
    <string name="searching_position">Buscando úbicacion!</string>
    <string name="gps_disabled">El GPS se encuentra apagado!</string>
    <string name="title_nearest_diners">Comedores cercanos</string>
    <string name="map_search_again">Buscar en esta área</string>
    <string name="map_geo_search_input_hint">Buscar</string>
    <string name="map_list_header_txt">Borrar</string>
    <string name="map_item_description">Av de la felicidad 123 - CP: 1234 \n Direccion: lallaa \n Telefono: laalaal</string>
    <string name="map_item_title">Comedor La Voz</string>
    <string name="map_item_follow">Seguir</string>
    <string name="map_item_details">Detalles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link">Sitio web</string>
    <string name="zipcode">Código postal</string>
    <string name="title_diner_details">Detalle de comedor</string>
    <string name="map_item_unfollow">Dejar de seguir</string>
    <string name="donation_diner">Comedor:</string>
    <string name="donation_button">¡Donar!</string>
    <string name="donation_title">Descripcion</string>
    <string name="donation_item_description">Dejanos tus datos de contacto</string>
    <string name="donation_screen_title">¿Qué vas a donar?</string>

    <string name="error_invalid_mail">El mail ingresado es inválido</string>
    <string name="popup_close_session_advice">Si continuas se cerrara tu sesión</string>
    <string name="popup_dont_close_session">Me quedo</string>
    <string name="diner_name_example">Comedor Asistencia Social para los necesitados</string>
    <string name="diner_address_example">Direccion: Teniente coronel Cesar Cardoso 3181 Piso: 1 Dpto: 12 - CP: 1712</string>
    <string name="title_diner_list">Listado de comedores</string>
    <string name="filter">Filtrar</string>
    <string name="title_activity_diner_filter">DinerFilterActivity</string>
    <string name="title_filter_diners">Filtrar comedores</string>
    <string name="hone_see_donations">Ver donaciones</string>
    <string name="title_donations_list">Mis donaciones</string>
    <string name="title_diner_list_filter">A quien quieres donar</string>
</resources>
