<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_main"
        android:icon="@mipmap/ic_pages_black_24dp"
        android:title="@string/action_main"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nearest_diners"
        android:icon="@mipmap/ic_pages_black_24dp"
        android:title="@string/action_nearest_diners"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_account"
        android:icon="@mipmap/ic_person_black_24dp"
        android:title="@string/action_my_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_password"
        android:icon="@mipmap/ic_vpn_key_black_24dp"
        android:title="@string/action_change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:icon="@mipmap/ic_person_outline_black_24dp"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>